# owls-q4-scientific

./: .gitignore  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: validate.yml  validate_props.py
.kiro/steering/: product.md  structure.md  tech.md
images/: qstudy_metrics.json  qstudy_summary.txt
owls-archive-q4/: README.md  TASKS.md  pyproject.toml
owls-archive-q4/src/q4/: cli.py  operator.py
owls-archive-q4/tests/: test_operator.py
src/: README.md
src/documentation/: README.md
src/fargate/: Dockerfile  analyze_cluster.py  build_fargate.sh  demo_embeds.csv  fargate_processor.py  orchestrator.py  pyproject.toml  test_embeddings.py  test_svd_optimization.py
src/fargate/q4/: __init__.py  operator.py  qstudy_map.py  svd_ops.py
src/fargate/tests/: __init__.py  test_coverage_gaps.py  test_operator.py  test_q4_properties.py
src/infrastructure/: README.md  config.tf  development.tfvars.example  fargate.tf  infrastructure.tf  production.tfvars.example  provider.tf  terraform.tfvars  variables.tf
src/scripts/: deploy.sh  docker-compose.yml  test_basic_pipeline.sh  test_data.csv
